# macjson

./: CHANGELOG.md  Cargo.toml  README.md  mac.json
.github/workflows/: main.yml  windows-gun.yml
src/: main.rs
