[package]
name = "macjson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }  
serde_json = "1.0"
redis = "0.25.3"
clap = "2.33"
indicatif = "0.17.8"

[profile.release]
strip = true 
opt-level = "z"
lto = true
[target.x86_64-pc-windows-gun]
rustflags = ["-C", "target-feature=+crt-static"]