[package]
name = "macjson"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }  
serde_json = "1.0"
clap = "2.33"
redis = "0.25.3"

[profile.release]
strip = true 
opt-level = 3
lto = true
[target.x86_64-pc-windows-gun]
rustflags = ["-C", "target-feature=+crt-static"]