[package]
name = "macjson"
version = "1.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }  
serde_json = "1.0"
redis = "0.25.3"
rayon = "1.10.0"
clap = { version = "4.5.7", features = ["derive"] }
regex = "1.10.5"

[profile.release]
# strip = true 
opt-level = 3
lto = true

[target.'cfg(target_os = "linux")']
rustflags = ["-C", "target-feature=+crt-static"]
 
[target.'cfg(target_os = "windows")']
rustflags = ["-C", "target-feature=+crt-static"]
